fixed alignment again

--- a/client/main.css
+++ b/client/main.css
@@ -179,7 +179,7 @@ img {
 }
 
 .equal-col {
-  width: 46%;
+  width: 45%;
 }
 
 
